Fix checkout issue and fixed alignment issue

--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -14,6 +14,11 @@
   --shadow: 2px 6px 15px -7px rgba(166, 166, 166, 1);
 }
 
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 body {
   background-color: #f6f6f6 !important;
   margin: 0;
@@ -266,6 +271,7 @@ a .custom-button-component:hover {
   -webkit-box-shadow: 0px 20px 20px 0px #cccccc3b;
   box-shadow: 0px 20px 20px 20px #cccccc54;
   width: 100%;
+  margin-left: -8px;
 }
 
 .rc-menu__item {
